--- a/src/scss/secsions/_tours.scss
+++ b/src/scss/secsions/_tours.scss
@@ -24,7 +24,7 @@
             margin-top: 200px;
 
             i{
-                color: var(--yellow);
+                color: var(--bs-yellow);
             }
         }
         &__title{
@@ -59,6 +59,9 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+       .d-table-cell{
+           padding-left: 15px;
+       }
         p{
             font-family: Courier Prime;
             @include font-size(16px, 18px);
@@ -97,7 +100,7 @@
 }
 .star{
     i{
-        color: var(--green);
+        color: var(--bs-teal);
     }
 }
 hr{
