--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -46,3 +46,54 @@ h6{
     color: $colorBlack70;
     margin-top: 13px !important;
 }
+
+
+
+@include res_320{
+ h2{
+    @include font-size(28px !important, 40px !important);
+    // padding: 0 20px;
+ }
+ h3{
+    font-size: 25px !important;
+    padding: 0 20px;
+ }
+ h4{
+    font-size: 22px !important;
+ }
+ h5{
+    font-size: 20px !important;
+ }
+ h5{
+    font-size: 18px !important;
+ }
+ h6{
+     font-size: 16px !important;
+ }
+}
+@include res_600{
+    h2{
+        @include font-size(35px !important, 50px !important);
+        padding: 0 20px;
+    }
+    h3{
+        font-size: 30px !important;
+    }
+    h6{
+        font-size: 15px !important;
+    }
+}
+@include res_960{
+    h2{
+        font-size: 50px !important;
+    }
+    h3{
+        font-size: 30px !important;
+    }
+    h5{
+        font-size: 22px !important;
+    }
+}
+@include res_1264{
+    
+}
