--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -38,6 +38,7 @@
     color: $colorBlack50;
     font-weight: bold;
     align-items: center;
+    align-self: center;
 }
 .book-btn{
     margin-top: 35px;
