--- a/src/scss/secsions/_secFooter.scss
+++ b/src/scss/secsions/_secFooter.scss
@@ -76,3 +76,73 @@
 .bv-example-row{
     padding: 50px 0 150px !important;
 }
+
+
+// ==========respo========================
+
+@include res_320{
+    .footer{
+        .container{
+            max-width: 80%;
+        }
+        h5{
+            margin-bottom: 25px !important;
+        }
+        .row-cols-3 > .col{
+            width: 100%;
+            margin-top: 50px;
+        }
+        &__ins{
+            .col{
+                width: calc(100%/3) !important;
+                margin-top: 0 !important;
+            }
+        }
+        &-title{
+            text-align: justify !important;
+        }
+        p, a{
+            font-size: 15px;
+        }
+    }
+}
+@include res_600{
+    .footer{
+        .container{
+            max-width: 80%;
+        }
+        h5{
+            margin-bottom: 25px !important;
+        }
+        .row-cols-3 > .col{
+            width: 100%;
+            margin-top: 50px;
+        }
+        &__ins{
+            .col{
+                width: calc(100%/3) !important;
+                margin-top: 0 !important;
+            }
+        }
+        
+    }
+    
+}
+@include res_960{
+    .footer{
+        &-follow{
+            h5{
+                margin-bottom: 45px !important;
+            }
+            .mb-4{
+                margin-bottom: 0.5rem !important;
+            }
+        }
+        p, a{
+            font-size: 14px;
+        }
+    }
+}
+@include res_1264{
+    
+}
