--- a/src/scss/secsions/_secHeader.scss
+++ b/src/scss/secsions/_secHeader.scss
@@ -1,9 +1,10 @@
 nav{
-    position: fixed;
+    position: fixed !important;
     left: 0;
     right: 0;
     top: 0;
-    z-index: 1;
+    z-index: 99;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 #nav-collapse{
     justify-content: flex-end;
@@ -45,4 +46,40 @@ nav{
     }
 }
 
+// ===============respo================
+
+@include res_320{
+    .navbar{
+        height: auto;
+        .container{
+            width: 80%;
+        }
+        &-brand{
+            font-size: 21px !important;
+        }
+    }
+}
+@include res_600{
+    .navbar{
+        max-width: 600px !important;
+        height: 70px;
+        &-brand{
+            font-size: 25px !important;
+        }
+        .container{
+            max-width: 100% !important;
+            width: auto;
+            width: 80%;
+        }
+    }
+    
+}
+@include res_960{
+    .navbar-brand {
+        font-size: 30px !important;
+    }
+}
+@include res_1264{
+    
+}
 
