--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,4 +4,5 @@
 @import '../scss/secsions/secHeader';
 @import '../scss/secsions/secFooter';
 @import '../scss/secsions/offer';
-@import '../scss/secsions/tours'
+@import '../scss/secsions/tours';
+@import '../scss/secsions/review';
