add contract page

--- a/src/scss/_valiable.scss
+++ b/src/scss/_valiable.scss
@@ -46,7 +46,7 @@ $colorBlack70: rgba(0, 0, 0, 0.7);
 $colorBlack60: rgba(0, 0, 0, 0.6);
 $colorBlack50: rgba(0, 0, 0, 0.5);
 $colorpurple: #6078AB;
-$colorpurple90: rgba(119, 134, 167, 0.9);
+$colorpurple90: #7786A7E5;
 $colorpurplelight: rgba(96, 120, 171, 0.5);
 $colorwhilelight: #E5E5E5;
 $colorlightblue:#78E4F2;
