--- a/src/scss/secsions/_tours.scss
+++ b/src/scss/secsions/_tours.scss
@@ -55,24 +55,24 @@
             width: 80%;
         }
     }
-    // &-info{
-    //     display: flex;
-    //     flex-direction: column;
-    //     height: 100%;
-    //    .d-table-cell{
-    //        padding-left: 15px;
-    //    }
-    //     p{
-    //         font-family: Courier Prime;
-    //         @include font-size(16px, 18px);
-    //         color: #000;
-    //         &:nth-child(3){
-    //             color: $colorOrange !important;
-    //             font-weight: bold;
-    //         }
-    //     }
+    &-info{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+       .d-table-cell{
+           padding-left: 15px;
+       }
+        p{
+            font-family: Courier Prime;
+            @include font-size(16px, 18px);
+            color: #000;
+            &:nth-child(3){
+                color: $colorOrange !important;
+                font-weight: bold;
+            }
+        }
         
-    // }
+    }
     &-best-right{
         .position-absolute{
             font-family: Courier Prime;
