--- a/src/scss/_valiable.scss
+++ b/src/scss/_valiable.scss
@@ -56,38 +56,11 @@ $colorred: #E26D5F;
 $colorreddark: #D14D54;
 $colorPink: #DD8E99;
 $colorBg: #F9F4F0;
+$colorBg_f6: #f6f6f6;
 $colorOrangeYellow: #F8A323;
 $colorOrange: #E88750;
 $colorDark: #3C3737;
 
-
-
-//respon
-// $res_359 : "only screen and (max-width: 360px)";
-// $res_360 : "only screen and (min-width: 361px) and (max-width: 767px)";
-// $res_768 : "only screen and (min-width: 768px) and (max-width: 1023px)";
-// $res_1024 : "only screen and (min-width: 1024px) and (max-width: 1170px)";
-
-// @mixin responsive_359() {
-//     @media #{$res_359} {
-//         @content;
-//     }
-// }
-// @mixin responsive_360() {
-//     @media #{$res_360} {
-//         @content;
-//     }
-// }
-// @mixin responsive_768() {
-//     @media #{$res_768} {
-//         @content;
-//     }
-// }
-// @mixin responsive_1024() {
-//     @media #{$res_1024} {
-//         @content;
-//     }
-// }
 
 $res_320 : "only screen and (max-width: 320px)";
 $res_600 : "only screen and (min-width: 321px) and (max-width: 600px)";
