--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,6 +1,8 @@
 .btn{
     font-family: Courier Prime;
     font-weight: bold !important;
+    padding: 10px;
+    border-radius:3px;
 }
 .offer-btn{
     font-size: 12px !important;
