--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,8 @@
 @import '../scss/valiable';
 @import '../scss/normal';
 @import '../scss/common';
-@import '../scss/secsions/secHeader';
-@import '../scss/secsions/secFooter';
-@import '../scss/secsions/offer';
-@import '../scss/secsions/tours';
-@import '../scss/secsions/review';
+@import '../scss/secsions/header';
+@import '../scss/secsions/footer';
+@import '../scss/secsions/home';
+@import '../scss/secsions/tourHome';
+@import '../scss/secsions/reviews';
