--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -7,6 +7,12 @@
 .bg-f6{
     background-color: $colorBg_f6;
 }
+.bg-fb{
+    background-color: #F6F7Fb;
+}
+.bg-login{
+    background-color: #EEF0F8;
+}
 .text-justify{
     text-align: justify !important;
 }
